objects/ccrz__E_Product__c.object
<CustomObject>
    <description>e-Commerce Product Master</description>
    <fields>
        <fullName>Custom_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Product is a Custom Product for end-user</description>
        <inlineHelpText>Indicates if Product is a Custom Product for end-user</inlineHelpText>
        <label>Custom Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity_in_Pallet__c</fullName>
        <label>Quantity in Pallet</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_Split_Order_Type__c</fullName>
        <description>This field is to define the order type for splitting the orders.</description>
        <label>Split Order Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_BrandCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Brand code logo.</description>
        <label>BrandCode</label>
        <referenceTo>cc_oo_BrandCodes__c</referenceTo>
        <relationshipLabel>CC Products</relationshipLabel>
        <relationshipName>CC_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_CompanyBrandCat__c</fullName>
        <label>Company Brand category</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_CompanyBrandDesc__c</fullName>
        <label>Company Brand description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_DwChecksum__c</fullName>
        <label>Checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_PurchaseReportingCode6__c</fullName>
        <label>Purchase Reporting Code6</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Second_Description__c</fullName>
        <description>This is the E2 description on the Products</description>
        <label>Second Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cc_oo_TypeOfProduct__c</fullName>
        <label>Type Of Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cc_oo_Type_Of_Product__c</fullName>
        <label>Type Of Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bag</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cc_oo_UoMDesc__c</fullName>
        <label>Unit of Measure description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_WeightUoM__c</fullName>
        <label>Weight Unit of Measure</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_isToteProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Tote Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AlternateName__c</fullName>
        <inlineHelpText>If Alternate Name is not empty - will be used for product name.</inlineHelpText>
        <label>Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessageRT__c</fullName>
        <description>Rich Text Field for Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
        <label>Availability Message RT</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
        <label>Availability Message</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Available_Subscription_Frequencies__c</fullName>
        <description>The subscription frequencies that are available for this particular product when ordering the product as a subscription.</description>
        <inlineHelpText>The subscription frequencies that are available for this particular product when ordering the product as a subscription.</inlineHelpText>
        <label>Available Subscription Frequencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__AverageRating__c</fullName>
        <description>Formula field - average product rating for this product</description>
        <formula>IF(ccrz__NumberOfReviews__c &gt; 0, ccrz__TotalRating__c / ccrz__NumberOfReviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__CoolerpakFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that the product requires a cooler pack when shipping</description>
        <label>Coolerpak Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__DryiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dry Ice Requirement.</description>
        <label>Dryice Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__DryiceWeight__c</fullName>
        <description>Dry Ice weight required.</description>
        <label>Dryice Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Employment_Level__c</fullName>
        <description>Employment Level Field for the Proposal Request form.</description>
        <label>Employment Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff/Union Member</fullName>
                </value>
                <value>
                    <fullName>Foreman</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this product will be available.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterData__c</fullName>
        <label>Filter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__GroundFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ground Shipping Requirement</description>
        <label>Ground Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__HazardousFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product is Hazardous.</description>
        <label>Hazardous Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__HazardousOutside48Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product is Hazardous, when shipped outside the continental US of 48 states.</description>
        <label>Hazardous Outside48 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Industry__c</fullName>
        <description>Industry to which this product belongs. Editable list of values. Note that this field is not currently used or displaying in CloudCraze</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>DOE</fullName>
                </value>
                <value>
                    <fullName>Electric Utility</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hydro Energy</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nuclear Energy</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Pulp &amp; Paper</fullName>
                </value>
                <value>
                    <fullName>Railroad</fullName>
                </value>
                <value>
                    <fullName>Shipbuilding</fullName>
                </value>
                <value>
                    <fullName>Telecommunication</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wind Energy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__InventoryType__c</fullName>
        <description>Describes the high level product types (in terms if inventory control) that need to be handled in the availability API. The implementations themselves will vary per requirements, such as whether or not the data is handled locally or is only read via an external service. This field could also be useful in terms of price display and calculations, such as pricing that differs for purchase vs. monthly rental.

NA - Not Applicable
STANDARD - &quot;off the shelf&quot; item.
RENTAL - Rented item.
CLASS - Seats in a class, conference, etc.
SOFTWARE - Downloaded item that is controlled by licensing rather than physical volume.</description>
        <inlineHelpText>Selects how this product&apos;s inventory is managed.</inlineHelpText>
        <label>InventoryType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STANDARD</fullName>
                    <default>true</default>
                    <label>STANDARD</label>
                </value>
                <value>
                    <fullName>RENTAL</fullName>
                </value>
                <value>
                    <fullName>CLASS</fullName>
                </value>
                <value>
                    <fullName>DOWNLOAD</fullName>
                </value>
                <value>
                    <fullName>ONSITE CLASS</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</description>
        <inlineHelpText>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</inlineHelpText>
        <label>Is Subscription Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this product is available as a subscription</description>
        <inlineHelpText>Determines if this product is available as a subscription</inlineHelpText>
        <label>Is Subscription Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this product is only available as a subscription</description>
        <inlineHelpText>Determines whether this product is only available as a subscription</inlineHelpText>
        <label>Is Subscription Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadTime__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Delivery Lead time for the product</description>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescRT__c</fullName>
        <description>Rich text field for the Long Description</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>Product long description</description>
        <label>LongDesc</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NumberOfReviews__c</fullName>
        <description>Formula - number of reviews submitted for this product</description>
        <label>Number Of Reviews</label>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__OvernightFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overnight Shipping Requirement.</description>
        <label>Overnight Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to tie multiple products together where the parent product has most of its attributes set, and the child product inherits those</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PortalSiteURL__c</fullName>
        <description>Formula field - utility field to allow admins to view the product detail page for this product</description>
        <formula>HYPERLINK(&quot;/apex/ccrz__ProductDetails?viewState=DetailView&amp;prev=errdlog&amp;sku=&quot; + ccrz__SKU__c, &quot;Product Detail View&quot;)</formula>
        <label>View In Portal Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ProductId__c</fullName>
        <description>External product Id, tying this product to the source system. Typically contains the SKU/product id from a backend system such as SAP.</description>
        <externalId>true</externalId>
        <label>Product Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__ProductStatus__c</fullName>
        <description>The status of the product. In Creation - Newly created product, that still requires augmentation and is not visible on the site; Blocked - product has been blocked from being displayed on the site; Not Orderable - product can be viewed, but cannot be added to a cart or ordered; Released - fully availble product</description>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Not Orderable</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>In Creation</fullName>
                    <default>true</default>
                    <label>In Creation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductType__c</fullName>
        <description>Type of product, which determines its behavior in the site. Product - standard product; Bundle - Product that groups multiple products together, with the pricing at the bundle level; Kit - Product that groups multiple products together, where the price is a rollup of the sub-products; Aggregated - Product that contains multiple options for ordering. The main product itself is a placeholder, such as a shirt, and the sub-products are the ordereable items (various shirt colors)</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coupon</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                    <default>true</default>
                    <label>Product</label>
                </value>
                <value>
                    <fullName>Plan</fullName>
                </value>
                <value>
                    <fullName>PlanOptions</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Aggregated</fullName>
                </value>
                <value>
                    <fullName>Assembly</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Configurable</fullName>
                </value>
                <value>
                    <fullName>Dynamic Kit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductWeight__c</fullName>
        <description>Weight of the product - used as a shipping parameter</description>
        <label>Product Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Quantityperunit__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of items that come in one order-able unit</description>
        <label>Quantityperunit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RequiredItemDialogText__c</fullName>
        <description>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</description>
        <inlineHelpText>The text to be displayed in the dialog that shows when a user adds this item to the cart if there are any required items for this product.</inlineHelpText>
        <label>Required Item Dialog Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__ReviewFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Review Flag</description>
        <label>Review Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__SEODescription__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOKeywords__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Keywords</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SEOTitle__c</fullName>
        <description>Text used within meta tags on the product detail page to help drive search engine optimization</description>
        <label>SEO Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SKU__c</fullName>
        <description>SKU/product number/product Id of the product. This is the unique identifier of the product, and is used as the primary reference point within CloudCraze</description>
        <externalId>true</externalId>
        <label>SKU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ServiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service Flag</description>
        <label>Service Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShipSeparately__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not this item must be shipped separately - not currently sued within the system</description>
        <label>Ship Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippedIndividually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for the products which should be shipped individually from other products from the same cart.</description>
        <label>Shipped Individually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ShippingWeight__c</fullName>
        <description>Overall shipping weight, including packaging, of the product - used as a shipping parameter</description>
        <inlineHelpText>This is required for CloudCraze to be able to show shipping options (Fedex) to the purchasing user.</inlineHelpText>
        <label>Shipping Weight(lbs)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDescRT__c</fullName>
        <description>Rich text field for the Short Description</description>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>Product short description</description>
        <label>ShortDesc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this product will be available.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Mulit-select list that allows you to assign the product to one or more storefronts.</description>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                    <default>true</default>
                    <label>DefaultStore</label>
                </value>
                <value>
                    <fullName>PurinaMills</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Disclaimer__c</fullName>
        <description>Hold the disclaimer of the subscription of this product.</description>
        <inlineHelpText>Hold the disclaimer of the subscription of this product.</inlineHelpText>
        <label>Subscription Disclaimer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Duration__c</fullName>
        <description>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then CloudCraze uses this field to determine how long a subscription lasts.</description>
        <inlineHelpText>Duration of the subscription of this product in months.  Acts as a static duration.  If the user is unable to select a duration on the cart / product detail page, then CloudCraze uses this field to determine how long a subscription lasts.</inlineHelpText>
        <label>Subscription Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Subscription_Frequency__c</fullName>
        <description>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</description>
        <inlineHelpText>Determines the frequency of orders placed for any order items of this product in days.  (7 = Weekly, 14 = bi-weekly, 30 = monthly, 60 = bi-monthly, 365 = annually)</inlineHelpText>
        <label>Subscription Frequency</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SupersedeProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which this product is superseding</description>
        <label>Supersede Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TaxRateId__c</fullName>
        <label>Tax Rate Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field determines if the product is taxable or not.</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalRating__c</fullName>
        <description>Formula field - total rating for this product from the product reviews</description>
        <label>Total Rating</label>
        <summarizedField>ccrz__E_Review__c.ccrz__Rating__c</summarizedField>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__UnitOfMeasure__c</fullName>
        <description>Product unit of measure - such as Each</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Product</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ccrz__ProductType__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ccrz__UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <columns>NAME</columns>
        <columns>ccrz__AlternateName__c</columns>
        <columns>ccrz__ProductId__c</columns>
        <columns>ccrz__LongDesc__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>ccrz__SKU__c</columns>
        <columns>ccrz__ShortDesc__c</columns>
        <columns>ccrz__UnitOfMeasure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__DefaultStore</fullName>
        <columns>NAME</columns>
        <columns>ccrz__ProductStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>includes</operation>
            <value>DefaultStore</value>
        </filters>
        <label>DefaultStore</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Products</pluralLabel>
    <recordTypes>
        <fullName>ccrz__ProductType_Assembly</fullName>
        <active>true</active>
        <description>Product Type Assembly</description>
        <label>ProductType_Assembly</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccrz__ProductType_Config</fullName>
        <active>true</active>
        <description>Product Type Configuration</description>
        <label>ProductType_Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>ccrz__ProductType_Normal</fullName>
        <active>true</active>
        <description>Product Type Normal</description>
        <label>ProductType_Normal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>